# Saturator

./: .gitignore  CMakeLists.txt  README.md
.claude/: README.md
.claude/agents/: code-reviewer.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  test-runner.md
.claude/ai/: plan-2026-02-06-culture-vulture-dsp-engine.md
.claude/commands/: code-review.md  create-plan.md  implement-plan.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SaturatorDSP.cpp  SaturatorDSP.h
